# Project_2._Search_for_vacancies

./: .gitignore  README.md  main.py  pyproject.toml
src/: auxiliary_functions.py  class_JSON.py  class_hh_API.py  class_vacancies.py
tests/: test_auxiliary_functions.py  test_class_JSON.py  test_class_hh_API.py  test_class_vacancies.py
